# smoomars

./: .travis.yml  Cargo.toml  README.md
examples/: common.rs  input_ra.geojson  plot.rs  ra.json  two_stocks.csv
src/: bbox.rs  distance.rs  errors.rs  idw.rs  lib.rs  main.rs  pot_stewart.rs  rbf.rs  test.rs  utils.rs
