[package]
name = "smoomars"
version = "0.1.0"
authors = ["mthh <matthieu.viry@cnrs.fr>"]

[dependencies]
error-chain = "*"
csv = "0.15"
clap = "2.23"
scan-rules = "0.2.0"
serde = "^1.0"
serde_json = "^1.0"
serde_derive = "^1.0"
jobsteal = {git = "https://github.com/rphmeier/jobsteal"}
geojson = "^0.9"
gdal = "^0.2"
rulinalg = "*"
num_cpus = "0.2"
flat_projection = "0.2.0"

[dev-dependencies]
gnuplot = "0.0.22"
argparse-rs = "=0.1.0"

[[bin]]
name = "smoomars"
doc = false
